--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+/* #105955 */
+/* #136b66 */
+:root {
+    --green: #136b66;
+    --lightgreen: #2b8782;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -13,11 +20,28 @@ p {
     color: #999;
 }
 
-/* Svo myndinn passi */
-img {
-    max-width: 100%;
-    max-height: 100%;
+.img-head {
+    max-width: 90%;
+    max-height: 90%;
     border-radius: 50%;
+    border: 5px solid var(--lightgreen);
+}
+
+.img-about {
+    max-width: 75%;
+    max-height: 75%;
+    border-radius: 1%;
+}
+
+.img-about-container {
+    display: flex;
+    justify-content: center;
+}
+
+.jumbotron {
+    background-color: var(--green);
+    color: white;
+    border: 5px solid var(--lightgreen);
 }
 
 a,
@@ -26,21 +50,6 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
-}
-
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
 }
 
 .line {
@@ -60,12 +69,13 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #105955;
+    background: var(--green);
     color: #fff;
     transition: all 0.3s;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-right: 5px solid var(--lightgreen);
 }
 
 #sidebar.active {
@@ -74,12 +84,12 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #105955;
+    background: var(--green);
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #105955;
+    border-bottom: 1px solid var(--green);
 }
 
 #sidebar ul p {
@@ -93,17 +103,14 @@ a:focus {
     display: block;
 }
 
+#sidebar ul {
+    position: fixed;
+}
+
 #sidebar ul li a:hover {
     color: #fff;
-    background: #136b66;
+    background: var(--lightgreen);
 }
-
-#sidebar > ul > li > a {
-    display: flex;
-    justify-content: center;
-}
-
-
 
 ul ul a {
     font-size: 0.9em !important;
@@ -111,8 +118,11 @@ ul ul a {
     background: #6d7fcc;
 }
 
-/* Content */
+.sidebar-content {
+    text-align: center;
+}
 
+/* Content */
 #content {
     width: 100%;
     padding: 20px;
@@ -121,30 +131,30 @@ ul ul a {
 }
 
 /* Verkefni, breyta grunn bootstrap stýlnum */
-
-.lgi {
-    border-color: black;
+.verk-btn {
+    background-color: var(--green);
+    border-color: var(--lightgreen);
 }
 
-.lgi:hover{
-    background-color: WhiteSmoke;
+.verk-btn:hover {
+    background-color: var(--lightgreen);
+    border-color: var(--green);
 }
 
-.lgi.active {
-    background-color: Silver;
-    border-color: black;
-    color: black;
+.bottom {
+    padding-bottom: 80px;
 }
 
 /* Týpíska mediaquerry til að skjárinn verði minni */
-
 @media (max-width: 768px) {
     #sidebar {
         margin-left: -250px;
     }
+
     #sidebar.active {
         margin-left: 0;
     }
+
     #sidebarCollapse span {
         display: none;
     }
